<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tickets"
        android:icon="@drawable/plane_icon"
        android:title="@string/title_tickets"/>

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/hotel_icon"
        android:title="@string/title_hotels"/>

    <item
        android:id="@+id/navigation_shorter"
        android:icon="@drawable/shorter_icon"
        android:title="@string/title_shorter"/>

    <item
        android:id="@+id/navigation_subscription"
        android:icon="@drawable/bell"
        android:title="@string/title_subscription"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile"/>

</menu>