<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tickets">

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.abler31.airlineapp.tickets.presentation.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets" >
        <action
            android:id="@+id/action_navigation_tickets_to_plugFragment"
            app:destination="@id/plugFragment" />
        <action
            android:id="@+id/action_navigation_tickets_to_countrySelected"
            app:destination="@id/countrySelected" />
    </fragment>

    <fragment
        android:id="@+id/navigation_hotels"
        android:name="com.abler31.airlineapp.hotels.HotelFragment"
        android:label="@string/title_hotels"
        tools:layout="@layout/fragment_hotels"/>

    <fragment
        android:id="@+id/navigation_shorter"
        android:name="com.abler31.airlineapp.shorter.ShorterFragment"
        android:label="@string/title_shorter"
        tools:layout="@layout/fragment_shorter"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.abler31.airlineapp.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_subscription"
        android:name="com.abler31.airlineapp.subscription.SubscriptionFragment"
        android:label="fragment_subscription"
        tools:layout="@layout/fragment_subscription" />
    <fragment
        android:id="@+id/plugFragment"
        android:name="com.abler31.airlineapp.tickets.presentation.PlugFragment"
        android:label="fragment_plug"
        tools:layout="@layout/fragment_plug" />
    <fragment
        android:id="@+id/countrySelected"
        android:name="com.abler31.airlineapp.countrySelected.presentation.CountrySelected"
        android:label="fragment_country_selected"
        tools:layout="@layout/fragment_country_selected" >
        <action
            android:id="@+id/action_countrySelected_to_navigation_tickets"
            app:destination="@id/navigation_tickets" />
    </fragment>

</navigation>